--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -16,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "express": "^5.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
