--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "usjc-docs",
   "private": true,
   "version": "0.0.0",
+  "main": "server.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
