--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "usjc-docs",
   "private": true,
   "version": "0.0.0",
-  "main": "app.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
