--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bcrypt": "^5.1.1",
     "express": "^5.1.0",
     "jwt-decode": "^4.0.0",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
